[RED] Updated PaymentServiceImplTest for setting payment status